fix(security): resolve CORS configuration in security config